added another brick for creating cubits

--- a/cubit/brick.yaml
+++ b/cubit/brick.yaml
@@ -1,5 +1,5 @@
 name: cubit
-description: A new brick created with the Mason CLI to create a new cubit.
+description: A new brick created with the Mason CLI.
 
 # The following defines the brick repository url.
 # Uncomment and update the following line before publishing the brick.
@@ -28,6 +28,6 @@ environment:
 vars:
   name:
     type: string
-    description: the name of the cubit
-    default: Cubit
-    prompt: Name of Cubit?
+    description: Cubit name
+    default:
+    prompt: What is the name of cubit?
